--- a/app/src/main/res/layout/activity_start_app.xml
+++ b/app/src/main/res/layout/activity_start_app.xml
@@ -12,14 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <ImageView
-            android:id="@+id/welcome_img"
-            android:layout_width="161dp"
-            android:layout_height="45dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/logo1" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="18dp" />
+            android:layout_marginBottom="@dimen/dp_48"
+            android:text="@string/smart_qc_manage_app"
+            android:textColor="@color/color_242525" />
+
 
     </RelativeLayout>
 
