--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40">
 
+
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -28,7 +29,22 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/server_count"
+                        android:text="@string/device_count"
+                        android:textColor="@color/color_242525" />
+
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="@string/good_product_count"
                         android:textColor="@color/color_242525" />
 
                 </RelativeLayout>
@@ -42,21 +58,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/terminal_count"
-                        android:textColor="@color/color_242525" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/technology_type"
+                        android:text="@string/bad_product_count"
                         android:textColor="@color/color_242525" />
 
                 </RelativeLayout>
@@ -88,11 +90,10 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/tv_server_count"
+                        android:id="@+id/tv_device_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="5"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_14" />
 
@@ -105,11 +106,10 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/tv_terminal_count"
+                        android:id="@+id/tv_good_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="18"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_14" />
 
@@ -121,11 +121,10 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/tv_type"
+                        android:id="@+id/tv_bad_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="半成品"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_14" />
 
@@ -141,7 +140,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="10000"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_14" />
 
@@ -159,7 +157,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_30"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -169,12 +168,12 @@
                     android:textColor="@color/color_292929" />
 
                 <RelativeLayout
-                    android:visibility="gone"
                     android:id="@+id/rl_part_up_page"
                     android:layout_width="@dimen/dp_50"
                     android:layout_height="@dimen/dp_20"
                     android:layout_marginLeft="@dimen/dp_5"
-                    android:background="@drawable/button_shape">
+                    android:background="@drawable/button_shape"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -189,7 +188,7 @@
                     android:id="@+id/tv_part_page"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:text="1/4"
                     android:textColor="@color/color_242525" />
 
@@ -216,7 +215,8 @@
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/chart_result_part"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_200"></com.github.mikephil.charting.charts.BarChart>
+                android:layout_height="@dimen/dp_200"
+                android:visibility="gone"></com.github.mikephil.charting.charts.BarChart>
 
 
             <LinearLayout
@@ -232,12 +232,12 @@
                     android:textColor="@color/color_292929" />
 
                 <RelativeLayout
-                    android:visibility="gone"
                     android:id="@+id/rl_project_up_page"
                     android:layout_width="@dimen/dp_50"
                     android:layout_height="@dimen/dp_20"
                     android:layout_marginLeft="@dimen/dp_5"
-                    android:background="@drawable/button_shape">
+                    android:background="@drawable/button_shape"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -252,8 +252,7 @@
                     android:id="@+id/tv_project_page"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:text="1/4"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:textColor="@color/color_242525" />
 
                 <RelativeLayout
@@ -293,12 +292,12 @@
                     android:textColor="@color/color_292929" />
 
                 <RelativeLayout
-                    android:visibility="gone"
                     android:id="@+id/rl_device_up_page"
                     android:layout_width="@dimen/dp_50"
                     android:layout_height="@dimen/dp_20"
                     android:layout_marginLeft="@dimen/dp_5"
-                    android:background="@drawable/button_shape">
+                    android:background="@drawable/button_shape"
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -313,8 +312,7 @@
                     android:id="@+id/tv_device_page"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:text="1/4"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:textColor="@color/color_242525" />
 
                 <RelativeLayout
