--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,4 +35,5 @@
     <color name="color_86c2e8">#86c2e8</color>
     <color name="color_OBCA4E">#FF42C253</color>
     <color name="color_F45637">#F45637</color>
+    <color name="color_585858">#585858</color>
 </resources>
