--- a/app/src/main/res/drawable/upgrade_shape.xml
+++ b/app/src/main/res/drawable/upgrade_shape.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <corners android:radius="@dimen/dp_8"></corners>
+    <solid android:color="@color/white"></solid>
 
 </shape>
