--- a/app/src/main/res/layout/activity_device_choth_list.xml
+++ b/app/src/main/res/layout/activity_device_choth_list.xml
@@ -10,10 +10,38 @@
 
     <include layout="@layout/base_title"></include>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rcy_cloth_list"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <include layout="@layout/date_view"></include>
+
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rcy_cloth_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_15"></android.support.v7.widget.RecyclerView>
+
+                <include layout="@layout/empty_view"></include>
+
+            </LinearLayout>
+
+
+        </ScrollView>
+
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 
 </LinearLayout>
