--- a/app/src/main/res/layout/activity_terminal_result_detail.xml
+++ b/app/src/main/res/layout/activity_terminal_result_detail.xml
@@ -119,7 +119,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="5"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_12" />
 
@@ -132,11 +131,10 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/tv_terminal_count"
+                        android:id="@+id/tv_good_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="100000"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_12" />
 
@@ -148,11 +146,10 @@
                     android:layout_weight="1">
 
                     <TextView
-                        android:id="@+id/tv_good_product_count"
+                        android:id="@+id/tv_bad_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="100"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_12" />
 
@@ -168,7 +165,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="0.1%"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_12" />
 
@@ -184,7 +180,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="10000"
                         android:textColor="@color/color_101010"
                         android:textSize="@dimen/sp_12" />
 
@@ -293,6 +288,8 @@
                     android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
             </RelativeLayout>
+
+            <include layout="@layout/empty_view"></include>
 
             <com.sinano.weight.MyExpandableListView
                 android:id="@+id/el_list"
