--- a/app/src/main/res/layout/base_title.xml
+++ b/app/src/main/res/layout/base_title.xml
@@ -46,7 +46,7 @@
         <RelativeLayout
             android:id="@+id/rl_save"
             android:layout_width="wrap_content"
-            android:layout_height="35dp"
+            android:layout_height="@dimen/dp_30"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
