--- a/app/src/main/res/layout/rcy_chart_list_item.xml
+++ b/app/src/main/res/layout/rcy_chart_list_item.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_titles"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
@@ -25,6 +26,7 @@
             android:textSize="@dimen/sp_15" />
 
         <TextView
+            android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_5"
