--- a/app/src/main/res/layout/rcy_cloth_list_item.xml
+++ b/app/src/main/res/layout/rcy_cloth_list_item.xml
@@ -5,18 +5,19 @@
     android:orientation="vertical">
 
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_85"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/dp_7"
         android:layout_marginRight="@dimen/dp_7"
         android:layout_marginTop="@dimen/dp_10"
-        android:background="@drawable/item_shape">
+        android:background="@drawable/item_shape"
+        android:paddingBottom="@dimen/dp_10">
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
             android:orientation="vertical">
 
@@ -82,12 +83,29 @@
                     android:layout_marginLeft="@dimen/dp_7"
                     android:textColor="@color/color_242525" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:text="@string/entrusted_unit_" />
+
+                <TextView
+                    android:id="@+id/tv_entrusted_unit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_7"
+                    android:textColor="@color/color_242525" />
+
+
             </LinearLayout>
 
             <LinearLayout
+                android:animateLayoutChanges="true"
+                android:id="@+id/ll_container1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_8">
+                android:layout_marginTop="@dimen/dp_8"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -101,14 +119,90 @@
                     android:layout_marginLeft="@dimen/dp_7"
                     android:textColor="@color/color_242525" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:text="@string/color_" />
+
+                <TextView
+                    android:id="@+id/tv_color"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_7"
+                    android:textColor="@color/color_242525" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:text="@string/weight_" />
+
+                <TextView
+                    android:id="@+id/tv_weight"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_7"
+                    android:textColor="@color/color_242525" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:animateLayoutChanges="true"
+                android:id="@+id/ll_container2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_8"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cloth_grade_" />
+
+                <TextView
+                    android:id="@+id/tv_grade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_7"
+                    android:textColor="@color/color_242525" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_15"
+                    android:text="@string/check_date_" />
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_7"
+                    android:textColor="@color/color_242525" />
 
             </LinearLayout>
 
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:id="@+id/rl_els"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true">
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/iv_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@mipmap/down" />
+
+        </RelativeLayout>
+
+
+    </RelativeLayout>
 
 
 </LinearLayout>
