--- a/app/src/main/res/layout/rcy_product_item.xml
+++ b/app/src/main/res/layout/rcy_product_item.xml
@@ -25,7 +25,7 @@
             android:id="@+id/name_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="cremera倾斜"
+            android:layout_marginLeft="@dimen/dp_3"
             android:textColor="@color/color_242525" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
