--- a/app/src/main/res/layout/rcy_terminal_item_view.xml
+++ b/app/src/main/res/layout/rcy_terminal_item_view.xml
@@ -14,6 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_terimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -25,8 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
-            android:text="001"
-            android:textColor="@color/black"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:textColor="@color/color_242525"
             android:textSize="@dimen/sp_13" />
 
     </LinearLayout>
